                            =======================
                            History For AdvanceSCAN
                            =======================


1 ADVANCESCAN VERSION 1.13 2004/11
==================================

* Relaxed a consistency check for the local header in zip files.
  The crc and size entries are allowed to contain the real
  value also if a data descriptor is present.


2 ADVANCESCAN VERSION 1.12 2004/11
==================================

* In -listinfo files are now allowed crc with the "0x"
  prefix.


3 ADVANCESCAN VERSION 1.11 2004/09
==================================

* Minor changes at the source. Removed the gamediff.* files.
* Fixed a compilation problem with gcc 3.4.


4 ADVANCESCAN VERSION 1.10 2004/08
==================================

* Added support for .chd files. Check the new -K option.
* The program now automatically renames any damaged .zip
  and .chd file instead of aborting.
* Updated the included expat library to version 1.95.8.


5 ADVANCESCAN VERSION 1.9 2004/07
=================================

* Fixed a Mac OS X crash problem with XML files with
  empty items.
* Only the XML driver.status entry is now used to recognize
  the game emulation status. Game not marked as
  "preliminary" are considered working games.


6 ADVANCESCAN VERSION 1.8 2004/04
=================================

* Added a filter capability able to filter in/out preliminary, parent
  and clone  roms. For example you can now keep separated
  preliminary and working roms.
* Added support for xml format at advdiff.
* Updated the expat library at version 1.95.7.


7 ADVANCESCAN VERSION 1.7 2003/08
=================================

* Added support for reading XML info file.
* Updated with automake 1.7.6.


8 ADVANCESCAN VERSION 1.6 2003/05
=================================

* Fixed the support for zips with additional data descriptors.
* Updated with autoconf 2.57 and automake 1.7.4.
* Added support for the new `nodump' flag in MAME 0.68.