@@ -1,8 +1,16 @@
 .TH "History For AdvanceSCAN" 1
 .SH NAME
 advscan \(hy History For AdvanceSCAN
-.SH ADVANCESCAN VERSION 1.13 2004/11 
+.SH ADVANCESCAN VERSION 1.13 2004/12 
 .PD 0
+.IP \(bu
+New rom zip are now created only if at least one unique
+rom of this set is found. Roms shared with other
+games don\(cqt trigger the zip creation. For example,
+galaga88 and pacmania share the rom ns1\(hymcu.bin. This
+functionality prevents the creation of the galaga88
+zip from a correct copy of pacmania using only the
+ns1\(hymcu.bin rom.
 .IP \(bu
 Relaxed a consistency check for the local header in zip files.
 The crc and size entries are allowed to contain the real
